# ytm-neoplayer

./: AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  installer.yml
scripts/: build_installer.sh  installer.nsi  linux_installer.sh  linux_setup.sh  macos_dmg.sh
tests/: test_cache.py  test_player.py  test_yt_api.py
ytm_player/: __main__.py  cache.py  models.py  player.py  yt_api.py
ytm_player/ui/: main_window.py
ytm_player/web/: bridge.js  player.html
